--- a/E12/E12.ipynb
+++ b/E12/E12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "painted-preserve",
+   "id": "metric-chemical",
    "metadata": {},
    "source": [
     "# 1. 데이터의 전처리"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "japanese-upgrade",
+   "id": "improving-measure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "trying-workshop",
+   "id": "greek-connection",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "connected-westminster",
+   "id": "canadian-dominant",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "muslim-earthquake",
+   "id": "supreme-details",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "pretty-fantasy",
+   "id": "opponent-juice",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "african-worcester",
+   "id": "divine-tradition",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "pleasant-supplier",
+   "id": "centered-tolerance",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "relative-handy",
+   "id": "unknown-provider",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "informative-coordinator",
+   "id": "viral-choice",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "subtle-barcelona",
+   "id": "otherwise-active",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "comprehensive-garlic",
+   "id": "eastern-mozambique",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "soviet-monroe",
+   "id": "ruled-judgment",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "refined-technical",
+   "id": "final-centre",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "preceding-sport",
+   "id": "unable-december",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "limiting-metallic",
+   "id": "sunset-membership",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subsequent-wesley",
+   "id": "balanced-immune",
    "metadata": {},
    "source": [
     "## 2. 미니 배치의 구성"
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "tight-navigation",
+   "id": "handled-employer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "designed-hospital",
+   "id": "critical-brush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "decreased-desert",
+   "id": "numerical-peninsula",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "correct-pottery",
+   "id": "moral-things",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "social-ranch",
+   "id": "excess-berlin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "purple-amateur",
+   "id": "architectural-eugene",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caring-judgment",
+   "id": "enclosed-formation",
    "metadata": {},
    "source": [
     "# Data Pipeline\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "acceptable-philadelphia",
+   "id": "ecological-banking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "regular-essence",
+   "id": "fantastic-controversy",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "warming-ballet",
+   "id": "portable-reception",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "caroline-amplifier",
+   "id": "desperate-object",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metric-thirty",
+   "id": "physical-brand",
    "metadata": {},
    "source": [
     "SessionDataLoader\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "coordinated-electronics",
+   "id": "resident-oakland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "other-manual",
+   "id": "massive-bundle",
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "still-forum",
+   "id": "solid-authority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "imperial-constitution",
+   "id": "lovely-third",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-bones",
+   "id": "infectious-communications",
    "metadata": {},
    "source": [
     "## 3. 모델 구성\n",
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "female-director",
+   "id": "spoken-delay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "sweet-toddler",
+   "id": "rental-count",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "single-rouge",
+   "id": "patient-implementation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "dramatic-beads",
+   "id": "functioning-roads",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-narrative",
+   "id": "mathematical-routine",
    "metadata": {},
    "source": [
     "## 4.  모델 학습"
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "sharing-leave",
+   "id": "forbidden-geology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "collective-somalia",
+   "id": "later-guest",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-keyboard",
+   "id": "thorough-touch",
    "metadata": {},
    "source": [
     "## 5. 모델 테스트"
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "about-philippines",
+   "id": "applicable-writing",
    "metadata": {},
    "outputs": [
     {
@@ -1684,16 +1684,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-webmaster",
+   "id": "voluntary-tanzania",
    "metadata": {},
    "source": [
     "## 6. 모델 개선"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "august-equivalent",
+   "metadata": {},
+   "source": [
+    "1) lr = 0.1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "coated-jordan",
+   "id": "destroyed-subscription",
    "metadata": {},
    "outputs": [
     {
@@ -1764,15 +1772,302 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cooperative-trading",
+   "id": "stable-flour",
    "metadata": {},
    "source": [
-    "- lr을 0.1로 바꾸자 성능 향상"
+    "- lr을 0.1로 바꾸자 성능 떨어짐"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "genuine-theorem",
+   "id": "concrete-jones",
+   "metadata": {},
+   "source": [
+    "2) lr = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "modified-aviation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:44<00:03, 45.26it/s, accuracy=0.0156, train_loss=5.48] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.26it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.133, train_loss=5.28]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 1: 0.142721\n",
+      "\t - MRR@20    epoch 1: 0.040934\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:42<00:03, 45.70it/s, accuracy=0.0469, train_loss=5.45] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.26it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.117, train_loss=5.32]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 2: 0.142340\n",
+      "\t - MRR@20    epoch 2: 0.041495\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:42<00:03, 45.76it/s, accuracy=0.0938, train_loss=5.45] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 3: 0.144055\n",
+      "\t - MRR@20    epoch 3: 0.042083\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "args = Args(tr, val, test, batch_size=128, hsz=50, drop_rate=0.1, lr=0.01, epochs=3, k=20)\n",
+    "train_model(model, args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tough-rapid",
+   "metadata": {},
+   "source": [
+    "3) Epoch = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "given-india",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:42<00:03, 45.65it/s, accuracy=0.0469, train_loss=5.39] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.109, train_loss=5.16]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 1: 0.142149\n",
+      "\t - MRR@20    epoch 1: 0.041198\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:39<00:03, 46.53it/s, accuracy=0.0391, train_loss=5.38] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.125, train_loss=5.32]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 2: 0.140625\n",
+      "\t - MRR@20    epoch 2: 0.041392\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:36<00:03, 47.32it/s, accuracy=0.0234, train_loss=5.41] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:34<00:42,  1.19it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.0859, train_loss=5.28] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 3: 0.142530\n",
+      "\t - MRR@20    epoch 3: 0.041752\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:39<00:03, 46.45it/s, accuracy=0.0625, train_loss=5.37] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.102, train_loss=5.3]   "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 4: 0.142721\n",
+      "\t - MRR@20    epoch 4: 0.041213\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:38<00:03, 46.93it/s, accuracy=0.0469, train_loss=5.4]  \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.164, train_loss=5.28]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 5: 0.142340\n",
+      "\t - MRR@20    epoch 5: 0.041985\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:38<00:03, 47.00it/s, accuracy=0.0547, train_loss=5.31] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.117, train_loss=5.11]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 6: 0.139672\n",
+      "\t - MRR@20    epoch 6: 0.041726\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:38<00:03, 46.75it/s, accuracy=0.0391, train_loss=5.38] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:33<00:42,  1.21it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.0938, train_loss=5.32] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 7: 0.140625\n",
+      "\t - MRR@20    epoch 7: 0.041705\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:42<00:03, 45.80it/s, accuracy=0.0469, train_loss=5.39] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.0781, train_loss=5.95] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 8: 0.138910\n",
+      "\t - MRR@20    epoch 8: 0.041989\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:42<00:03, 45.61it/s, accuracy=0.0312, train_loss=5.37] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]\n",
+      "Train:   0%|          | 0/7597 [00:00<?, ?it/s, accuracy=0.102, train_loss=5.32]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 9: 0.138720\n",
+      "\t - MRR@20    epoch 9: 0.041317\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  98%|█████████▊| 7429/7597 [02:34<00:03, 48.03it/s, accuracy=0.0547, train_loss=5.37] \n",
+      "Evaluation:  45%|████▍     | 41/92 [00:32<00:40,  1.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t - Recall@20 epoch 10: 0.138910\n",
+      "\t - MRR@20    epoch 10: 0.041445\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "args = Args(tr, val, test, batch_size=128, hsz=50, drop_rate=0.1, lr=0.01, epochs=10, k=20)\n",
+    "train_model(model, args)\n",
+    "test_model(model, args, test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "offensive-daisy",
    "metadata": {},
    "source": [
     "## 7. 회고"
@@ -1780,12 +2075,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-cycle",
+   "id": "finite-proceeding",
    "metadata": {},
    "source": [
     "1. Movielens 데이터셋을 session based recommendation 관점으로 전처리하는 과정이 체계적으로 진행되었다.\n",
     "2. RNN 기반의 예측 모델이 정상적으로 구성되어 안정적으로 훈련이 진행되었다.\n",
-    "3. 세션정의, 모델구조, 하이퍼파라미터 등을 변경해서 실험하여 Recall, MRR 등의 변화추이를 관찰하였다."
+    "3. 세션정의, 모델구조, 하이퍼파라미터 등을 변경해서 실험하여 Recall, MRR 등의 변화추이를 관찰하였다.\n",
+    "4. 모델 향상을 위해 batch_size와 lr을 조정하였을 때, 0.001(기본)보다 0.1일때는 성능이 떨어졌고, 0.01일때는 성능이 증가했다.\n",
+    "5. epoch을 3에서 10으로 높였을 때는 성능이 상승했다."
    ]
   }
  ],
