--- a/E13/E13.ipynb
+++ b/E13/E13.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "blank-hierarchy",
+   "id": "greatest-competition",
+   "metadata": {},
+   "source": [
+    "# E13 CIFAR-10 이미지 생성하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adapted-improvement",
    "metadata": {},
    "source": [
     "## STEP 0. 작업환경 구성하기"
@@ -11,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "velvet-hello",
+   "id": "egyptian-bennett",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "outdoor-coordinate",
+   "id": "artificial-craft",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "devoted-career",
+   "id": "monthly-wellington",
    "metadata": {},
    "source": [
     "## STEP 1. 데이터셋 구성하기"
@@ -53,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "trying-province",
+   "id": "found-magic",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "advanced-consciousness",
+   "id": "miniature-blowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "compressed-special",
+   "id": "moderate-charity",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "wanted-treaty",
+   "id": "palestinian-ceremony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "outer-spotlight",
+   "id": "proof-sunday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-paraguay",
+   "id": "reliable-ghana",
    "metadata": {},
    "source": [
     "## STEP 2. 생성자 모델 구현하기"
@@ -150,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "superb-device",
+   "id": "spanish-royal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "vertical-brooks",
+   "id": "little-example",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "residential-finland",
+   "id": "pleased-details",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "laughing-andrew",
+   "id": "spread-peninsula",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "boolean-bidder",
+   "id": "polyphonic-guatemala",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-semiconductor",
+   "id": "industrial-actress",
    "metadata": {},
    "source": [
     "## STEP 3. 판별자 모델 구현하기\n"
@@ -304,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "peaceful-review",
+   "id": "selected-champagne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "refined-multimedia",
+   "id": "expected-marathon",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "healthy-correspondence",
+   "id": "obvious-penny",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "south-ranch",
+   "id": "threatened-scope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polished-schema",
+   "id": "smoking-taxation",
    "metadata": {},
    "source": [
     "## STEP 4. 손실함수와 최적화 함수 구현하기"
@@ -422,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "instant-johnston",
+   "id": "separated-vegetarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "lined-preserve",
+   "id": "sufficient-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "polish-denmark",
+   "id": "following-outreach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "aboriginal-palestinian",
+   "id": "knowing-tender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-question",
+   "id": "emerging-timothy",
    "metadata": {},
    "source": [
     "## STEP 5. 훈련과정 상세 기능 구현하기\n"
@@ -479,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "infinite-instruction",
+   "id": "compressed-breathing",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "rural-article",
+   "id": "healthy-designation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "independent-alarm",
+   "id": "another-limitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "distinct-pilot",
+   "id": "found-colonial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "handled-hungarian",
+   "id": "understood-flooring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "interstate-latter",
+   "id": "photographic-advisory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "quality-finish",
+   "id": "capable-necklace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "owned-humanitarian",
+   "id": "continuous-shipping",
    "metadata": {},
    "source": [
     "## STEP 6. 학습 과정 진행하기"
@@ -668,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "damaged-victoria",
+   "id": "technological-breathing",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "abstract-greenhouse",
+   "id": "geographic-blowing",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "earned-number",
+   "id": "incident-suicide",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-opera",
+   "id": "sporting-comedy",
    "metadata": {},
    "source": [
     "## 회고\n",
@@ -801,14 +809,6 @@
     "\n",
     "3. 추가적인 GAN 모델구조 혹은 학습과정 개선 아이디어를 제안하고 이를 적용하였다.:제출 아이디어를 제출 프로젝트에 반영하고, 그 결과가 아이디어 적용 이전보다 향상되었음을 시각적으로 입증하였다."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "official-quarterly",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
